--- a/index.html
+++ b/index.html
@@ -12,8 +12,106 @@
 </head>
 
 <body>
+
+    <header>
+        <div class="text-center text-white " style="background-color: #122548;">
+            <br>
+            <h2>Call Today for a Free Consultation <a href="#" class="text-warning" style="text-decoration: none;">
+                    (312)-663-8576</a></h3>
+                <br>
+        </div>
+        <div class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom ">
+            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+                <img src="img/powel.svg" alt="Powell and Pisman" style="width: 50%; height:80% ;">
+            </a>
+            <nav class="navbar navbar-expand-lg navbar-light bg-">
+                <div class="container-fluid">
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    About
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#">Brain injury</a></li>
+                                    <li><a class="dropdown-item" href="#">Catastrophic Injury</a></li>
+                                    <li>
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                </ul>
+                            </li>
+
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    Practice Areas
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#">Brain injury</a></li>
+                                    <li><a class="dropdown-item" href="#">Catastrophic Injury</a></li>
+                                    <li>
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                </ul>
+                            </li>
+
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    Vehicle Accidents
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li>
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                </ul>
+                            </li>
+
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    Cities Served
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li>
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                </ul>
+                            </li>
+
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    Resources
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li>
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Contact Us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Español</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
     <section>
-        <img src="img/pexels-creative-vix-9754.jpg" alt="" style="position:absolute; width:100%; height:60%; z-index:-1;">
+        <img src="img/pexels-creative-vix-9754.jpg" alt=""
+            style="position:absolute; width:100%; height:60%; z-index:-1;">
         <div class="container text-left text-white">
             <br>
             <br>
@@ -324,8 +422,21 @@
                 <br>
         </div>
     </section>
-
-
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 text-white"
+        style="background-color: #122548; text-decoration: none;">
+        <p class="col-md-4 offset-md-1 text-body-secondary">
+            Law Rank.
+        </p>
+        <ul class="nav col-md-6 justify-content-end">
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">© 2025 - Powell and Pisman Injury Lawyers
+                    | All Rights Reserved </a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Features</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Chicago, IL. </a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Privacy Policy</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Sitemap</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Disclaimer</a></li>
+        </ul>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
