Secciones inecesarias eliminadas

--- a/index.html
+++ b/index.html
@@ -152,93 +152,6 @@
             </div>
         </div>
     </header>
-    <section class="text-white"
-        style="background-image: url('img/pexels-creative-vix-9754.jpg'); background-size: cover; background-position: center; height: 60vh; margin-top: 0;">
-        <div class="container text-white ">
-            <div class="row">
-                <div class="col-12 col-md-4 mt-5">
-                    <h4>More Lawyer. Less Fee.</h4>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-4">
-                    <h1>Chicago Personal Injury Lawyer</h1>
-                </div>
-            </div>
-            <div class="row">
-                <div class=" col-12 col-md-3">
-                    <h4>35+ Years of Combined Experience.<br>$250+ Million Won for Our Clients.</h4>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-4 mb-5">
-                    <a href="#" class="btn btn-warning text-white mt-3">CLICK FOR A FREE CASE REVIEW</a>
-                </div>
-            </div>
-
-        </div>
-    </section>
-    <section class="bg-light">
-        <div class="container text-center ">
-            <div class="row justify-content-center mt-5">
-                <div class="col-5 ">
-                    <h5 class="text-warning">Available 24/7</h5>
-                </div>
-            </div>
-            <div class="row justify-content-center mt-3">
-                <div class="col-8" style="color: #122548;">
-                    <h1>Get a free Consultation!</h1>
-                </div>
-            </div>
-            <form class="mt-3">
-                <div class="row">
-                    <div class="col-12 col-md-3">
-                        <div class="p-3">
-                            <input type="text" class="form-control" aria-describedby="Name" placeholder="Name">
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <div class="p-3 ">
-                            <input type="email" class="form-control" aria-describedby="Email" placeholder="Email">
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <div class="p-3 ">
-                            <input type="email" class="form-control" aria-describedby="Phone" placeholder="Phone">
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <div class="p-3 ">
-                            <input type="email" class="form-control" aria-describedby="Zip Code" placeholder="Zip Code">
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="p-3">
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
-                                placeholder="Describe your case"></textarea>
-                        </div>
-
-                    </div>
-
-                </div>
-            </form>
-            <div class="row justify-content-center mt-3">
-                <div class="col-4">
-                    <a href="#" class="btn btn-warning text-white ">Go somewhere</a>
-                </div>
-            </div>
-
-            <div class="row justify-content-center mt-3">
-                <div class="col-4">
-                    <h5 style="color: #122548;">There’s No Obligation</h5>
-                </div>
-            </div>
-            <br>
-            <br>
-        </div>
-    </section>
     <section style="background-color: white;">
         <div class="container col-9 ">
             <div class="row">
@@ -306,159 +219,6 @@
             </div>
         </div>
     </section>
-    <section class="bg-light">
-        <div class="container text-center px-4">
-            <div class="row mt-5">
-                <div class="col-12 mt-5">
-                    <h1 class="text-warning">Why Should I Hire Powell & Pisman Injury Lawyers To Handle My Chicago
-                        Personal Injury Case?</h1>
-                </div>
-            </div>
-            <div class="row mt-5">
-                <div class="col-12 col-md-6 mt-5">
-                    <div class="card shadow h-100 w-100">
-                        <div class="card-title mt-5">
-                            <h5 style="color: #122548;">We Have Over 35 years of Combined Experience Representing
-                                Clients
-                            </h5>
-                        </div>
-                        <div class="card-body">
-                            <p class="text-secondary ">
-                                We have 35 years of combined experience handling all types of personal injury cases.
-                                We’re here to fight for the maximum compensation you deserve.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 mt-5">
-                    <div class="card shadow h-100 w-100">
-                        <div class="card-title mt-5">
-                            <h5 style="color: #122548;">We’ve Recovered Over $250 Million in Settlements and Verdicts
-                            </h5>
-                        </div>
-                        <div class="card-body">
-
-                            <p class="text-secondary mt-4">
-                                Since we started our firm, our successful legal team has won over 75 settlements or
-                                verdicts of at least $1 million.on behalf of injury victims and their families.
-                            </p>
-                            <p class="text-secondary">
-                                Now, we’re here to stand by your side and do everything we can to get the money
-                                you need and deserve.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row mt-4">
-                <div class="col-12 col-md-6 mt-5 mb-5">
-                    <div class="card shadow h-100 w-100">
-                        <div class="card-title mt-5">
-                            <h5 style="color: #122548;">Our Personal Injury Lawyer Will Fight While You Recover</h5>
-                        </div>
-                        <div class="card-body">
-
-                            <p class="text-secondary">
-                                Injuries are difficult enough. The last thing you want is a lengthy insurance battle.
-                            </p>
-                            <p class="text-secondary">
-                                Your attorney will handle every aspect of the insurance and legal process. That way,
-                                you can focus on your recovery while knowing your financial interests are protected.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 mt-5 mb-5">
-                    <div class="card shadow h-100 w-100">
-                        <div class="card-title mt-5">
-                            <h5 style="color: #122548;">Providing Access to Respected Experts
-                            </h5>
-                        </div>
-                        <div class="card-body">
-
-                            <p class="text-secondary">
-                                Most personal injury cases can quickly become complicated.
-                            </p>
-                            <p class="text-secondary">
-                                Experts in medicine, accident reconstruction, economics, and
-                                life planning can all help you prove your case. An experienced
-                                attorney will have contacts with respected experts who can help
-                                maximize your case value.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="" style="background-color: #122548; ">
-        <div class="container text-center px-4">
-            <div class="row">
-                <div class="col-12 mt-5">
-                    <h2 class="text-white">"</h5>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-12">
-                    <h1 class="text-warning">What Should I Do After an Accident?</h1>
-                </div>
-            </div>
-            
-            <div class="row">
-                <div class="col-12 mt-5 mb-5">
-                    <div id="carouselExample" class="carousel slide">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <div class="card " style="background-color: #122548; border-style: none;">
-                                    <div class="card-body">
-                                        <p class="text-white">
-                                            I would definetly recommend Paul and Steve to anyone. They has
-                                            <br>
-                                            been good to me, my famyly and friends. They worked very closely
-                                            <br>
-                                            with us whilehandling our cases and made sure that we undestood
-                                            <br>
-                                            exactly what was going on
-                                        </p>
-                                        <p>
-                                        <h5 class="text-warning">Romane V</h5>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <div class="card " style=" background-color: #122548; border-style: none;">
-                                    <div class="card-body">
-                                        <p class="text-white">
-                                            This comapny has done an amazing job with my case. And i would
-                                            <br>
-                                            definetly recommend them to people I know that's having hard
-                                            <br>
-                                            time with getting the right attorney!
-                                        </p>
-                                        <p>
-                                        <h5 class="text-warning">Brittney R.</h5>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
     <section class=" pt-5" style="background-color: white;">
         <div class="row justify-content-center mt-5">
             <div class="col-6">
@@ -480,7 +240,7 @@
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper mb-5 ">
                         <div class="swiper-slide mb-5">
-                            <div class="card col-10 bg-light" >
+                            <div class="card col-10 bg-light">
                                 <div class="card-body text-start ">
                                     <div class="container pt-5">
                                         <div class="row offset-1 ">
@@ -508,7 +268,7 @@
                             </div>
                         </div>
                         <div class="swiper-slide mb-5">
-                            <div class="card col-10 bg-light" >
+                            <div class="card col-10 bg-light">
                                 <div class="card-body text-start ">
                                     <div class="container pt-5">
                                         <div class="row offset-1 ">
@@ -536,7 +296,7 @@
                             </div>
                         </div>
                         <div class="swiper-slide mb-5">
-                            <div class="card col-10 bg-light" >
+                            <div class="card col-10 bg-light">
                                 <div class="card-body text-start ">
                                     <div class="container pt-5">
                                         <div class="row offset-1 ">
@@ -577,7 +337,7 @@
     <section class="bg-light">
         <div class="container ">
             <div class="row justify-content-center text-center">
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4 mb-5">
                     <h2 class="col-12" style="color:#122548;">Our Chicago, IL Law Office</h2>
                     <p class="col-12 fs-5 text-secondary">Visit our personal injury law office near you to meet with
                         one of our trusted attorneys.</p>
@@ -592,7 +352,7 @@
                     <h3 class="col-12  "><a href="#" class="text-warning" style="text-decoration: none;">(312)-525-9968
                         </a></h3>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4 mb-5">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1484.8668930687074!2d-87.629081!3d41.898582!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34d93695bd5%3A0x53351041c50ffa37!2sPowell%20and%20Pisman%20Injury%20Lawyers%20Chicago!5e0!3m2!1sen!2smx!4v1748597307739!5m2!1sen!2smx"
                         width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
@@ -602,20 +362,40 @@
             </div>
         </div>
     </section>
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 text-white"
+    <section style="background-color: #122548;">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center text-white border-top"
         style="background-color: #122548; text-decoration: none;">
-        <p class="col-md-3 offset-md-1 text-body-secondary">
-            Law Rank.
-        </p>
-        <ul class="nav col-md-7 justify-content-end">
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">© 2025 - Powell and Pisman Injury Lawyers
-                    | All Rights Reserved </a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Chicago, IL. </a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Privacy Policy</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Sitemap</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Disclaimer</a></li>
-        </ul>
+        <div class="container ">
+            <div class="row ">
+                <div class="col-4 text-center pt-4">
+                    <p>
+                        Law Rank.
+                    </p>
+                </div>
+                <div class="col-8  pt-4">
+                    <ul class="nav justify-content-end">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link text-white">
+                                © 2025 - Powell and Pisman Injury Lawyers | All Rights Reserved
+                            </a>
+                        </li>
+                        <li class="nav-item"><a href="#" class="nav-link text-white">Features</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link text-white">Chicago, IL. </a></li>
+                        <li class="nav-item"><a href="#" class="nav-link text-white">Privacy Policy</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link text-white">Sitemap</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link text-white">Disclaimer</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <!-- Boostrap JS -->
