--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="col-12">
                     <div class="d-flex flex-wrap justify-content-center  border-bottom ">
-                        <a href="/"
+                        <a href="#"
                             class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
                             <img src="img/powel.svg" alt="Powell and Pisman" style="width: 50%; height:80% ;">
                         </a>
@@ -162,31 +162,23 @@
                     </p>
                 </div>
                 <div class="col-12 py-5 ">
-                    <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="img/logo-1162901_1280.png" class="d-block w-20 img-fluid"
-                                    style=" height:10%; width:10% ; margin:auto;" alt="Imagen 1">
+                    <div class="swiper mySwiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img src="img/logo-1162901_1280.png" class="d-block img-fluid"
+                                    alt="Imagen 1">
                             </div>
-                            <div class="carousel-item">
-                                <img src="img/logo-307673_1280.png" class="d-block w-20 img-fluid"
-                                    style=" height:10%; width:10% ; margin:auto;" alt="Imagen 2">
+                            <div class="swiper-slide">
+                                <img src="img/logo-307673_1280.png" class="d-block img-fluid"
+                                    alt="Imagen 2">
                             </div>
-                            <div class="carousel-item">
-                                <img src="img/php-151199_1280.png" class="d-block w-20 img-fluid"
-                                    style=" height:10%; width:10% ; margin:auto;" alt="Imagen 3">
+                            <div class="swiper-slide">
+                                <img  src="img/php-151199_1280.png" class="d-block img-fluid"
+                                     alt="Imagen 3">
                             </div>
                         </div>
-                        <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleControls"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
                     </div>
                 </div>
             </div>
@@ -466,6 +458,71 @@
                     </div>
                 </div>
 
+            </div>
+        </div>
+    </section>
+
+    <section class="seccion10">
+        <div class="container-fluid ">
+            <div class="row">
+                <div class="col-12 col-md-6 bg-warning px-5 py-5">
+                    <h1 class="ps-5">Contact Us</h1>
+                    <div class="container-fluid px-5">
+                        <div class="row text-left ">
+                            <div class="col-12 col-md-3 pt-4">
+                                CALL US
+                            </div>
+                            <div class="col-12 col-md-9 pt-4">
+                                <a href="#" class="text-white">(312)-626-6257</a>
+                            </div>
+                            <div class="col-12 col-md-3 pt-4">
+                                FOLLOW US
+                            </div>
+                            <div class="col-12 col-md-9 pt-4">
+                                <a class="icon-link" href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="bi" viewBox="0 0 16 16"
+                                        aria-hidden="true">
+                                        <path
+                                            d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z" />
+                                    </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="bi" viewBox="0 0 16 16"
+                                        aria-hidden="true">
+                                        <path
+                                            d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z" />
+                                    </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="bi" viewBox="0 0 16 16"
+                                        aria-hidden="true">
+                                        <path
+                                            d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z" />
+                                    </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="bi" viewBox="0 0 16 16"
+                                        aria-hidden="true">
+                                        <path
+                                            d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z" />
+                                    </svg>
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-3 pt-4">
+                                VISIT US
+                            </div>
+                            <div class="col-12 col-md-9 pt-4">
+                                <P>
+                                    Chicago Injury Lawyers<br>
+                                    875 N Dearborn St 4th<br>
+                                    Floor, Chicago, IL 60610,<br>
+                                    United States
+
+                                </P>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="px-5 pt-4">Chicago, IL Law Office Map</p>
+                </div>
+                <div class="col-12 col-md-6 p-0">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1484.8668930687074!2d-87.629081!3d41.898582!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34d93695bd5%3A0x53351041c50ffa37!2sPowell%20and%20Pisman%20Injury%20Lawyers%20Chicago!5e0!3m2!1sen!2smx!4v1748597307739!5m2!1sen!2smx"
+                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
         </div>
     </section>
