--- a/index.html
+++ b/index.html
@@ -117,40 +117,40 @@
     </header>
 
     <section class="seccion1">
-        <div class="container text-white py-5">
+        <div class="container py-5">
             <div class="row">
                 <div class="col-12 col-md-4">
                     <h4>More Lawyer. Less Fee.</h4>
                     <h1 class="fs-1">Chicago Personal Injury Lawyer</h1>
                     <h4 class="fs-5">35+ Years of Combined Experience.<br>$250+ Million Won for Our Clients.</h4>
-                    <a href="#" class="btn btn-warning text-white mt-3">CLICK FOR A FREE CASE REVIEW</a>
+                    <a href="#" class="btn mt-3">CLICK FOR A FREE CASE REVIEW</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="">
+    <section class="seccion2">
         <div class="container py-5">
             <div class="row ">
                 <div class="col-12">
-                    <h1 class="text-warning text-left">Chicago Injury Attorneys Who Will Put You First</h1>
+                    <h1 class="text-left">Chicago Injury Attorneys Who Will Put You First</h1>
                 </div>
             </div>
             <div class="row text-left py-4 ">
                 <div class="col-12 col-md-6">
-                    <p class="text-secondary">
-                        Were you hurt due to someone else’s negligent or wrongful behavior in Chicago, IL? If so,
+                    <p >
+                        Were you hurt due to someone else’s negligent or wrongful behavior in <a href="#">Chicago</a>, IL? If so,
                         contact
-                        Powell and Pisman Injury Lawyers at (312) 525-9968 for a free initial consultation. Our
+                        <a href="#">Powell and Pisman Injury Lawyers</a> at <a href="#">(312) 525-9968</a> for a free initial consultation. Our
                         experienced
-                        Chicago personal injury attorneys are here to do everything in our power to aid in your
+                        <strong>Chicago personal injury attorneys</strong> are here to do everything in our power to aid in your
                         physical,
                         mental
                         , and financial recovery.
                     </p>
                 </div>
                 <div class="col-12 col-md-6">
-                    <p class="text-secondary">
+                    <p >
                         Since our firm’s founding, our legal team has successfully represented thousands of clients
                         after
                         motor
@@ -165,16 +165,13 @@
                     <div class="swiper mySwiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="img/logo-1162901_1280.png" class="d-block img-fluid"
-                                    alt="Imagen 1">
+                                <img src="img/logo-1162901_1280.png" class="d-block img-fluid" alt="Imagen 1">
                             </div>
                             <div class="swiper-slide">
-                                <img src="img/logo-307673_1280.png" class="d-block img-fluid"
-                                    alt="Imagen 2">
+                                <img src="img/logo-307673_1280.png" class="d-block img-fluid" alt="Imagen 2">
                             </div>
                             <div class="swiper-slide">
-                                <img  src="img/php-151199_1280.png" class="d-block img-fluid"
-                                     alt="Imagen 3">
+                                <img src="img/php-151199_1280.png" class="d-block img-fluid" alt="Imagen 3">
                             </div>
                         </div>
                         <div class="swiper-button-next"></div>
@@ -189,7 +186,7 @@
         <div class="container-fluid py-5">
             <div class="row justify-content-center ">
                 <div class="col-12">
-                    <h4 class="text-warning text-center">
+                    <h4 class="text-center text-uppercase">
                         Case Results
                     </h4>
                 </div>
@@ -467,7 +464,7 @@
             <div class="row">
                 <div class="col-12 col-md-6 bg-warning px-5 py-5">
                     <h1 class="ps-5">Contact Us</h1>
-                    <div class="container-fluid px-5">
+                    <div class="container px-5 bg-primary">
                         <div class="row text-left ">
                             <div class="col-12 col-md-3 pt-4">
                                 CALL US
